---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 TAG\r\n2 TAG\r\n"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/syntax_inputs/skipped_level.ged
---
gedcom::record_error::invalid_child_level

  × GEDCOM file contains a record-hierarchy error
  ╰─▶ Invalid child level 2, expected 1 or less
